# DeepLearningUtils

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: import.yml  tests.yml
Layers/Attention/EfficientViT_LiteMHSA/: litemhsa_pytorch.py
Layers/Backbones/Efficientvit/: efficientvit_keras.py  efficientvit_pytorch.py
Layers/Blur2D/: blur2d_keras.py  blur2d_pytorch.py
Layers/Convolution/: conv2d_same_pytorch.py  mbconv_keras.py  mbconv_pytorch.py
docs/: _quarto.yml  docs.Rproj  index.html  index.qmd  search.json
docs/.quarto/idx/: index.qmd.json
docs/.quarto/xref/: INDEX
docs/_site/: search.json
docs/_site/user_guide/: index.html
docs/how_to_guides/: installation.html  installation.qmd
docs/user_guide/: index.html  index.qmd
docs/user_guide/data_types/: _metadata.yml  index.html  index.qmd  keypoints.html  keypoints.qmd
docs/user_guide/labels/: index.html  index.qmd  keypoint_labels.html  keypoint_labels.qmd  line_labels.html  line_labels.qmd  segmentation_labels.html  segmentation_labels.qmd
docs/user_guide/layers/: Blur2D.html  Blur2D.qmd  index.html  index.qmd  mask_encoder.html  mask_encoder.qmd  sequential_coattention.html  sequential_coattention.qmd
docs/user_guide/models/: index.html  index.qmd  keypoint_detector.html  keypoint_detector.qmd  line_model.html  line_model.qmd  (+2 more)
tests/: conftest.py  test_blur2d.py  test_efficientvit.py  test_install_tensorflow.py  test_install_torch.py  testing_utilities.py
tests/Losses/: __init__.py
tests/Metrics/: test_embedding_separation_metric.py
(+166 files in other folders)
