[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "deeplearningutils"
version = "0.1.0"
description = "Shared deep learning utilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "keras",
]

[project.optional-dependencies]
torch = ["torch", "torchvision"]
tensorflow = ["tensorflow"]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
